# blisk

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: backend.rs  capabilities.rs  deps.rs  lib.rs  main.rs
src/handlers/: definition.rs  diagnostics.rs  document_links.rs  folding.rs  hover.rs  mod.rs  references.rs  selection.rs  semantic_tokens.rs
src/parsing/: doc_comments.rs  document.rs  java.rs  kotlin.rs  mod.rs  scala.rs
src/symbols/: extract.rs  lang.rs  mod.rs  types.rs
src/workspace/: scanner.rs
tests/: lsp_handlers.rs
tests/fixtures/: JavaHelper.java  cross_ref.scala  folding_test.scala  hover_test.scala  kotlin_helper.kt  kotlin_refs_scala.kt  scala_refs_java.scala  scala_uses_java.scala  scala_uses_kotlin.scala  simple_class.scala  usage.scala  with_errors.scala
