[package]
name = "blisk"
version = "0.3.0"
edition = "2024"

[dependencies]
log = "0.4"
simple_logger = { version = "5", features = ["timestamps"] }
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "8"
tokio = { version = "1.51.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.26.8"
tree-sitter-scala  = "0.25.0"
tree-sitter-java   = "0.23.5"
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin", rev = "6032dfd418aefbc0d5085051c3c58aa07791e813" }
